duicontrolpanel (0.13.2~unreleased) unstable; urgency=low

  * Changes fix for NB#265196 to use common group header instead of
    putting the separator and the label under each other
  * Fixes: sheet does not follow dcp orientation

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 27 Jul 2011 14:33:36 +0200

duicontrolpanel (0.13.1.1) unstable; urgency=low

  * Fixes: NB#265196 - "Privacy mode" plug-in on Notifications settings page
    should be visually separated from rest of the plug-ins
  * Fixes: NB#268370 - [TASK] Brigthness slider needs info about power
    save mode
  * Fixes: NB#269545 - Notification: §qtn_noti_settings_subheader§ [Show
    notifications for:] is missing
  * fixed 243414 - [TASK] page->dismiss only works for 2 history stack
  * Fixes: NB#271925 - Declarative settings applet names have a "!!"
    prefix on the Applications page of the Settings application
  * Fixes: NB#268757 - Notification; String §qtn_noti_settings_private_mode§
    is truncated in Russian;
  * fixed 255760 - [TASK] API: Function to disable toggle type dcpbrief
  * Fixes: NB#264064 - Control panel grants full set of credentials for
    3rd party libraries
  * fixed 272868 - Settings main view is showing before opening the
    applet in the given scenario
  * fixed 273726 - some times applet views flashes twice in settings

 -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 22 Jul 2011 15:23:00 +0200

duicontrolpanel (0.12.22) unstable; urgency=low

  * Fixes: NB#270097 - there is only one applet in about category

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 15 Jun 2011 11:24:42 +0200

duicontrolpanel (0.12.21) unstable; urgency=low

  * Fixes: NB#260681 - 'Show events from:'
    §qtn_home_events_settings_subheader§ subheader should be shown in
    Notifications -> Events feed

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 02 Jun 2011 15:45:48 +0200

duicontrolpanel (0.12.20) unstable; urgency=low
